# cross-platform-cpp-playground

./: .gitignore
src/VS/HelloWindows/: HelloWindows.vcxproj
src/VSCode/with-clang/: .gitignore  README.md
src/VSCode/with-clang-cmake/: .gitignore  CMakeLists.txt  README.md  main.cpp
src/VSCode/with-gcc/: .gitignore  README.md  main.cpp  mod.cppm
src/gcc-c/: CMakeLists.txt  CMakePresets.json  README.md  main.c
